[workspace]
members = [
    "rspring-core",
    "rspring-web",
    "rspring-data-mysql",
    "rspring-data-redis",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["RSpring Team <yan829513@gmail.com>"]
license = "MIT"
repository = "https://github.com/hi-liyan/rspring"
homepage = "https://github.com/hi-liyan/rspring"
documentation = "https://github.com/hi-liyan/rspring"
keywords = ["spring", "rust", "web", "framework", "dependency-injection"]
categories = ["web-programming::http-server", "web-programming"]
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.0", features = ["full"] }

# Configuration
config = { version = "0.14", features = ["toml", "yaml", "json"] }
toml = "0.8"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# Async
async-trait = "0.1"
futures = "0.3"

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
once_cell = "1.19"
lazy_static = "1.4"
url = "2.4"
num_cpus = "1.16"

# Development dependencies
tokio-test = "0.4"
tempfile = "3.8"