[package]
name = "axum-boot-starter-data-mysql"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "MySQL data starter for the AxumBoot framework"

[dependencies]
axum-boot-core = { path = "../axum-boot-core", version = "0.1.0" }
sqlx.workspace = true
sea-orm.workspace = true
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true