[package]
name = "axum-boot-starter-web"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Web starter for the AxumBoot framework"

[dependencies]
axum-boot-core = { path = "../axum-boot-core", version = "0.1.0" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test.workspace = true