[package]
name = "rspring-data-redis"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Redis data starter for the RSpring framework"

[dependencies]
rspring-core = { path = "../rspring-core", version = "0.1.0" }
redis.workspace = true
deadpool-redis.workspace = true
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true