[package]
name = "rspring-web"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Web starter for the RSpring framework"

[lib]
proc-macro = true

[dependencies]
# Core framework
rspring-core = { path = "../rspring-core", version = "0.1.0" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Proc macro dependencies
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

# Utilities
chrono.workspace = true

[dev-dependencies]
tokio-test.workspace = true