[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-processor"
path = "src/main.rs"

[dependencies]
# 只使用 rspring-core，不需要Web功能
rspring-core = { path = "../../rspring-core" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }